added: swagger and write README.md
